Fix max-width/min/width overlap;

--- a/public_src/components/app/app.component.less
+++ b/public_src/components/app/app.component.less
@@ -18,7 +18,7 @@ body {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     #map {
         top: 0;
     }
@@ -39,7 +39,7 @@ body {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     #sidebar {
         top: 0;
     }
